--- a/Practicas/practica6-ldd-1c2024.tex
+++ b/Practicas/practica6-ldd-1c2024.tex
@@ -163,8 +163,8 @@ Para estos ejercicios, usar el dataset \lstinline{penguins}.
 \begin{enumerate}
 \item Excluya a los ping\"uinos observados en la isla Biscoe.
 \item Sólo se quede con las variables que están entre species y \lstinline{body_mass_g} inclusive.
-\item Renombrar la variable species a \lstinline{especie_ping\"uino}.
-\item Agrupar los datos por la variable \lstinline{especie_ping\"uino}.
+\item Renombrar la variable species a \lstinline{especie_pinguino}.
+\item Agrupar los datos por la variable \lstinline{especie_pinguino}.
 \item Encontrar el valor medio de las variables que contienen el string ``length'', separando por la especie del ping\"uino, y llamando a las columnas como las originales pero agregando ``\_mean'' al final.
 \end{enumerate}
 
